implemented a function to save todo data to local storage and utilized unique key for each user for storing data

--- a/dad.html
+++ b/dad.html
@@ -11,7 +11,7 @@
   <script>
 
     document.addEventListener('DOMContentLoaded', function () {
-      createTodoApp(document.getElementById('todo-app'), 'Dads to-do list');
+      createTodoApp(document.getElementById('todo-app'), 'Dads to-do list', 'dad');
     });
   </script>
 </head>
