--- a/mom.html
+++ b/mom.html
@@ -11,7 +11,7 @@
   <script>
 
     document.addEventListener('DOMContentLoaded', function () {
-      createTodoApp(document.getElementById('todo-app'), 'Moms to-do list');
+      createTodoApp(document.getElementById('todo-app'), 'Moms to-do list', 'mom');
     });
   </script>
 </head>
